- fixed crash when closing ktechlab with probes placed on a circuit
- fixed button for inserting DrawParts (text, arrow, rectangle, etc.) in circuits and in flowcode
- fixed pressing cancel in the new.. dialog; now it does work
- fixed with a hard-coded limit: I think the 'scope just keeps filling data points into RAM,
    because RAM usage climbs steadily until the virtual machine crashes (same as the kde3 version)
    - would be useful to set a reasonable limit for the data points, initially hardcoded, to be made configurable in the future
    - for now limit is hard-coded, the probe data flats-out when limit is reached; memory usage does not increase to infinity
- fixed crash on File -> Quit
- fixed some missing icons: attach blockdevice cancel contents exec fileclose fileopen filesave log reload source source_c
    stop view_bottom view_right window_new
    button_cancel down fileexport pencil player_pause player_play project_open rotate rotate_ccw rotate_cw
    editdelete
    text_block     text_center     text_left     text_right     text_sub     text_super
    align_horizontally -> align-horizontal-center (oxygen)
    align_vertically -> align-vertical-center (oxygen)
    distribute_horizontally -> distribute-horizontal-x (oxygen)
    distribute_vertically -> distribute-vertical-y (oxygen)
    file_export_image -> document-export
    fileimport -> document-import
    imagegallery -> insert-image
    launch -> run-build (doxygen)
    paintbrush -> draw-brush (doxygen)
    rightjust -> format-justify-right (doxygen)
    routing_mode_auto -- not actually used
    routing_mode_manual -- not actually used
- fixed missing icons:
    - some icons are distributed inside the kde3 icons; find them there and install them under ktechlab icons
    ktechlab_mechanics - not actually used
    null - false positive
- add licence information about 3rd party icons
- fixed: when creating new project, ok/cancel does not work
- fixed: when creating a project, ktechlab crashes